[project]
name = "jarvis-ai"
version = "0.1.0"
description = "J.A.R.V.I.S — Just A Rather Very Intelligent System"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "openai==1.35.0",
    "groq>=0.9.0",
    "httpx==0.27.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=22.0.0",
]

[dependency-groups]
dev = []